--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
 </head>
 
 <body>
+  <nav>
+    <div class="text-content">
+      <h1>Fun Bus</h1>
+    </div>
 
-
+    <div>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+  </nav>
 
   <div class="container home">
 
